add avatar helper

--- a/app/assets/stylesheets/bootstrap-override.css.scss
+++ b/app/assets/stylesheets/bootstrap-override.css.scss
@@ -9,3 +9,20 @@ ul.nav li.dropdown:hover .dropdown-menu{
 .navbar .dropdown-menu {
  margin-top: 0px;
 }
+
+.navbar .dropdown-menu,
+.nav .dropdown-menu {
+ margin-top: 0px;
+}
+
+
+.group:before, .group:after {
+   content: "";
+   display: table;
+}
+.group:after {
+   clear: both;
+}
+.group {
+   zoom: 1; /* IE6&7 */
+}
