--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -1,6 +1,17 @@
 @import "bootstrap-setting";
 @import "twitter/bootstrap";
 @import "bootstrap-override";
+@import "compass/utilities";
+
+@import "committees";
+
+.box { 
+  background-color: #fff;
+  padding: 10px;  
+  margin: 0 0 20px 0; /* negative indent the amount of the padding to maintain the grid system */
+  @include border-radius(6px);
+}
+
 
 .social{
    float:left;
