--- a/app/views/common/_menu.html.erb
+++ b/app/views/common/_menu.html.erb
@@ -9,17 +9,16 @@
 
           <%= link_to(Setting.app_name, Setting.domain , :class => "brand" )%>
 
-          <%= render :partial => "common/search_form" %>
+          <%# render :partial => "common/search_form" %>
 
    
      
           <div class="nav-collapse">
       
               <%= render_list :class => "nav" do |li|
-                li << link_to("Link-1","#")
-                li << link_to("Link-2","#")
-                li << link_to("Link-3","#")
-              end %>
+                li << link_to("委員列表","/committees")
+                li << link_to("公報列表","/gazettes")
+                     end %>
               
               <%= render :partial => "common/user_nav"%>
 
