--- a/app/views/gazettes/show.html.erb
+++ b/app/views/gazettes/show.html.erb
@@ -1,5 +1,11 @@
 
-<div class="span12">
+<div class="span9">
+
   <%= raw render_gazette_content(@gazette.content) %>
+
+</div>
+
+<div class="span3">
+  <%= render :partial => "verbal_question", :collection =>  @verbal_questions, :as => :verbal_question %>
 
 </div>
