--- a/app/views/gazettes/_verbal_question.html.erb
+++ b/app/views/gazettes/_verbal_question.html.erb
@@ -1,5 +1,5 @@
 
 <li> 
-  <%= verbal_question.id %> .
+  <span> <%= ibutton("", gazette_verbal_question_path(@gazette,verbal_question), :class => "btn btn-small", :iclass => "icon icon-search") %> </span>
   <%= verbal_question.involved_person_list %>
 </li>
