--- a/app/views/verbal_questions/show.html.erb
+++ b/app/views/verbal_questions/show.html.erb
@@ -1,6 +1,6 @@
 <div class="span12">
 
-  <h3> No. <%= @gazette.id %> 公報</h3>
+  <h3> No. <%= @gazette.ly_id %> 公報</h3>
   <%= @verbal_question.involved_person_list.join(" / ") %>
   <hr>
   <%= raw @verbal_question.to_html %> 
