--- a/app/views/common/_menu.html.erb
+++ b/app/views/common/_menu.html.erb
@@ -16,7 +16,7 @@
           <div class="nav-collapse">
       
               <%= render_list :class => "nav" do |li|
-                li << link_to("委員列表","/committees")
+                li << link_to("委員列表","/elections")
                 li << link_to("公報列表","/gazettes")
                 li << link_to("口頭質詢", new_admin_gazette_verbal_question_path(@gazette)) if @gazette && (current_user && current_user.admin? )
               end %>
