--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -4,7 +4,7 @@
 
      <%= content_tag_for(:tr, @gazettes) do |gazette| %>
      <td width="100">
-       公報 No. <%= render_gazette_title(gazette) %> 
+       公報 No. <%= link_to(gazette.ly_id, gazette_path(gazette), :target => "_blank" ) %> 
      </td>
      <td>
       <%= search_match_result(gazette.content,@query_string) %>
