--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -38,3 +38,10 @@
 .group {
    zoom: 1; /* IE6&7 */
 }
+
+.search-controller {
+  .match {
+    background-color: #f7f619;
+    font-weight: bold;
+  }
+}
