--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -7,7 +7,7 @@
        公報 No. <%= link_to(gazette.ly_id, gazette_path(gazette), :target => "_blank" ) %> 
      </td>
      <td>
-      <%= search_match_result(gazette.content,@query_string) %>
+        <%= gazette.excerpt_text_for_search_cache(@query_string) %>
      </td>
      <% end %>
    </tr>
